    with no columns; while this might not be what 
    the user intended, it is a valid use case 
    as an Index could be a placeholder for just an 
    index of a certain name.

  - [feature] Added new connection event
    dbapi_error(). Is called for all DBAPI-level
    errors passing the original DBAPI exception
    before SQLAlchemy modifies the state 
    of the cursor.

- mssql
  - [feature] Added interim create_engine flag
    supports_unicode_binds to PyODBC dialect,
    to force whether or not the dialect
    passes Python unicode literals to PyODBC 
    or not.

  - [bug] Repaired the use_scope_identity
    create_engine() flag when using the pyodbc
    dialect.  Previously this flag would be
    ignored if set to False.  When set to False,
    you'll get "SELECT @@identity" after each 
    INSERT to get at the last inserted ID,
    for those tables which have "implicit_returning"
    set to False.

- postgresql
  - [feature] Added new for_update/with_lockmode()
    options for Postgresql: for_update="read"/
    with_lockmode("read"),
    for_update="read_nowait"/
    with_lockmode("read_nowait").
    These emit "FOR SHARE" and "FOR SHARE NOWAIT",
    respectively.  Courtesy Diana Clarke 
    [ticket:2445]

- mysql
  - [bug] Fixed bug whereby column name inside 
    of "KEY" clause for autoincrement composite
    column with InnoDB would double quote a 
    name that's a reserved word.  Courtesy Jeff
    Dairiki. [ticket:2460]

  - [bug] Fixed bug whereby get_view_names() for
    "information_schema" schema would fail
    to retrieve views marked as "SYSTEM VIEW".
    courtesy Matthew Turland.

0.7.6
=====
- orm
  - [bug] Fixed event registration bug
    which would primarily show up as
    events not being registered with 
    sessionmaker() instances created
    after the event was associated
    with the Session class.  [ticket:2424]

  - [bug] Fixed bug whereby a primaryjoin
    condition with a "literal" in it would